@@ -1,24 +1,22 @@
 // code by ynager
 package ch.alpine.owl.bot.se2.glc;
 
-import java.awt.event.WindowAdapter;
-import java.awt.event.WindowEvent;
-import java.util.Arrays;
+import java.util.List;
 
-import ch.alpine.java.ren.WaypointRender;
-import ch.alpine.java.win.OwlAnimationFrame;
+import ch.alpine.bridge.awt.WindowClosed;
 import ch.alpine.owl.ani.api.GlcPlannerCallback;
 import ch.alpine.owl.glc.adapter.EntityGlcPlannerCallback;
 import ch.alpine.owl.glc.adapter.RegionConstraints;
 import ch.alpine.owl.glc.core.PlannerConstraint;
-import ch.alpine.owl.gui.ren.RegionRenders;
 import ch.alpine.owl.math.region.ConeRegion;
 import ch.alpine.owl.math.region.RegionUnion;
 import ch.alpine.owl.math.region.RegionWithDistance;
 import ch.alpine.owl.math.state.StateTime;
-import ch.alpine.sophus.api.Region;
+import ch.alpine.owl.util.ren.RegionRenders;
+import ch.alpine.owl.util.win.OwlAnimationFrame;
 import ch.alpine.sophus.crv.d2.PolygonRegion;
-import ch.alpine.sophus.lie.se2.Se2Geodesic;
+import ch.alpine.sophus.lie.se2.Se2Group;
+import ch.alpine.sophus.math.api.Region;
 import ch.alpine.sophus.ref.d1.BSpline2CurveSubdivision;
 import ch.alpine.tensor.RealScalar;
 import ch.alpine.tensor.Tensor;
@@ -45,9 +43,9 @@ public class GokartWaypoint0Demo extends GokartDemo {
     HelperHangarMap hangarMap = new HelperHangarMap("/dubilab/obstacles/20180423.png", gokartEntity);
     // ---
     Tensor waypoints = ResourceData.of("/dubilab/waypoints/20180425.csv");
-    waypoints = new BSpline2CurveSubdivision(Se2Geodesic.INSTANCE).cyclic(waypoints);
+    waypoints = new BSpline2CurveSubdivision(Se2Group.INSTANCE).cyclic(waypoints);
     Region<Tensor> polygonRegion = new PolygonRegion(VIRTUAL);
-    Region<Tensor> union = RegionUnion.wrap(Arrays.asList(hangarMap.region, polygonRegion));
+    Region<Tensor> union = RegionUnion.wrap(hangarMap.region, polygonRegion);
     PlannerConstraint plannerConstraint = RegionConstraints.timeInvariant(union);
     // ---
     owlAnimationFrame.add(gokartEntity);
@@ -59,16 +57,11 @@ public class GokartWaypoint0Demo extends GokartDemo {
     GlcPlannerCallback glcPlannerCallback = EntityGlcPlannerCallback.of(gokartEntity);
     GlcWaypointFollowing glcWaypointFollowing = new GlcWaypointFollowing( //
         waypoints, RealScalar.of(2), gokartEntity, plannerConstraint, //
-        Arrays.asList(gokartEntity, glcPlannerCallback));
+        List.of(gokartEntity, glcPlannerCallback));
     glcWaypointFollowing.setHorizonDistance(RealScalar.of(7));
     glcWaypointFollowing.startNonBlocking();
     // ---
-    owlAnimationFrame.jFrame.addWindowListener(new WindowAdapter() {
-      @Override
-      public void windowClosed(WindowEvent windowEvent) {
-        glcWaypointFollowing.flagShutdown();
-      }
-    });
+    WindowClosed.runs(owlAnimationFrame.jFrame, () -> glcWaypointFollowing.flagShutdown());
   }
 
   public static void main(String[] args) {
