@@ -2,23 +2,22 @@
 package ch.alpine.owl.bot.se2.glc;
 
 import java.awt.Dimension;
-import java.awt.event.WindowAdapter;
-import java.awt.event.WindowEvent;
 import java.util.Arrays;
+import java.util.List;
 
-import ch.alpine.java.ren.WaypointRender;
-import ch.alpine.java.win.OwlAnimationFrame;
+import ch.alpine.bridge.awt.WindowClosed;
 import ch.alpine.owl.ani.api.GlcPlannerCallback;
 import ch.alpine.owl.bot.r2.WaypointDistanceCost;
 import ch.alpine.owl.glc.adapter.EntityGlcPlannerCallback;
 import ch.alpine.owl.glc.adapter.RegionConstraints;
 import ch.alpine.owl.glc.core.CostFunction;
 import ch.alpine.owl.glc.core.PlannerConstraint;
-import ch.alpine.owl.gui.ren.RegionRenders;
 import ch.alpine.owl.math.region.ConeRegion;
 import ch.alpine.owl.math.region.RegionWithDistance;
 import ch.alpine.owl.math.state.StateTime;
-import ch.alpine.sophus.lie.se2.Se2Geodesic;
+import ch.alpine.owl.util.ren.RegionRenders;
+import ch.alpine.owl.util.win.OwlAnimationFrame;
+import ch.alpine.sophus.lie.se2.Se2Group;
 import ch.alpine.sophus.ref.d1.BSpline3CurveSubdivision;
 import ch.alpine.tensor.RealScalar;
 import ch.alpine.tensor.Tensor;
@@ -37,7 +36,7 @@ public class GokartWaypoint1Demo extends GokartDemo {
     final StateTime initial = new StateTime(Tensors.vector(33.6, 41.5, 0.6), RealScalar.ZERO);
     Tensor waypoints = ResourceData.of("/dubilab/waypoints/20180610.csv");
     // System.out.println(Pretty.of(waypoints));
-    waypoints = Nest.of(new BSpline3CurveSubdivision(Se2Geodesic.INSTANCE)::cyclic, waypoints, 1);
+    waypoints = Nest.of(new BSpline3CurveSubdivision(Se2Group.INSTANCE)::cyclic, waypoints, 1);
     CostFunction waypointCost = WaypointDistanceCost.of( //
         waypoints, true, RealScalar.of(1), RealScalar.of(7.5), new Dimension(640, 640));
     GokartVecEntity gokartEntity = new GokartVecEntity(initial) {
@@ -47,7 +46,7 @@ public class GokartWaypoint1Demo extends GokartDemo {
       }
     };
     // set cost function hierarchy
-    gokartEntity.setCostVector(Arrays.asList(waypointCost), Arrays.asList(0.0));
+    gokartEntity.setCostVector(List.of(waypointCost), Arrays.asList(0.0));
     gokartEntity.addTimeCost(1, 0.0);
     // ---
     HelperHangarMap hangarMap = new HelperHangarMap("/dubilab/obstacles/20180423.png", gokartEntity);
@@ -61,16 +60,11 @@ public class GokartWaypoint1Demo extends GokartDemo {
     GlcPlannerCallback glcPlannerCallback = EntityGlcPlannerCallback.of(gokartEntity);
     GlcWaypointFollowing glcWaypointFollowing = new GlcWaypointFollowing( //
         waypoints, RealScalar.of(2), gokartEntity, plannerConstraint, //
-        Arrays.asList(gokartEntity, glcPlannerCallback));
+        List.of(gokartEntity, glcPlannerCallback));
     glcWaypointFollowing.setHorizonDistance(RealScalar.of(8));
     glcWaypointFollowing.startNonBlocking();
     // ---
-    owlAnimationFrame.jFrame.addWindowListener(new WindowAdapter() {
-      @Override
-      public void windowClosed(WindowEvent windowEvent) {
-        glcWaypointFollowing.flagShutdown();
-      }
-    });
+    WindowClosed.runs(owlAnimationFrame.jFrame, () -> glcWaypointFollowing.flagShutdown());
   }
 
   public static void main(String[] args) {
