@@ -2,24 +2,28 @@
 package ch.alpine.owl.bot.se2.rrts;
 
 import java.awt.Graphics2D;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Consumer;
 
 import javax.swing.JButton;
 
-import ch.alpine.java.gfx.GeometricLayer;
-import ch.alpine.java.ref.util.ToolbarFieldsEditor;
-import ch.alpine.owl.gui.ren.LaneRender;
+import ch.alpine.ascona.crv.AbstractCurveDemo;
+import ch.alpine.ascona.util.dis.ManifoldDisplay;
+import ch.alpine.ascona.util.dis.Se2ClothoidDisplay;
+import ch.alpine.ascona.util.dis.Se2CoveringClothoidDisplay;
+import ch.alpine.ascona.util.dis.Se2CoveringDisplay;
+import ch.alpine.ascona.util.dis.Se2Display;
+import ch.alpine.ascona.util.ren.LeversRender;
+import ch.alpine.ascona.util.win.BaseFrame;
+import ch.alpine.bridge.gfx.GeometricLayer;
+import ch.alpine.bridge.ref.util.ToolbarFieldsEditor;
 import ch.alpine.owl.lane.LaneInterface;
 import ch.alpine.owl.lane.StableLanes;
-import ch.alpine.sophus.demo.curve.AbstractCurveDemo;
-import ch.alpine.sophus.ext.dis.Se2ClothoidDisplay;
-import ch.alpine.sophus.ext.dis.Se2CoveringClothoidDisplay;
-import ch.alpine.sophus.ext.dis.Se2CoveringDisplay;
-import ch.alpine.sophus.ext.dis.Se2Display;
+import ch.alpine.owl.util.ren.LaneRender;
+import ch.alpine.owl.util.win.DemoInterface;
 import ch.alpine.sophus.ref.d1.LaneRiesenfeldCurveSubdivision;
 import ch.alpine.tensor.RationalScalar;
 import ch.alpine.tensor.RealScalar;
@@ -27,17 +31,17 @@ import ch.alpine.tensor.Scalar;
 import ch.alpine.tensor.Tensor;
 import ch.alpine.tensor.ext.Serialization;
 
-public class LaneConsumptionDemo extends AbstractCurveDemo {
+public class LaneConsumptionDemo extends AbstractCurveDemo implements DemoInterface {
   private final LaneRender laneRender = new LaneRender();
   private LaneInterface lane = null;
 
   @SafeVarargs
   public LaneConsumptionDemo(Consumer<LaneInterface>... consumers) {
-    this(Arrays.asList(consumers));
+    this(List.of(consumers));
   }
 
   public LaneConsumptionDemo(Collection<Consumer<LaneInterface>> consumers) {
-    super(Arrays.asList( //
+    super(List.of( //
         Se2ClothoidDisplay.ANALYTIC, //
         Se2ClothoidDisplay.LEGENDRE, //
         Se2CoveringClothoidDisplay.INSTANCE, //
@@ -57,10 +61,15 @@ public class LaneConsumptionDemo extends AbstractCurveDemo {
 
   @Override
   protected Tensor protected_render(GeometricLayer geometricLayer, Graphics2D graphics, int degree, int levels, Tensor control) {
-    renderControlPoints(geometricLayer, graphics);
+    ManifoldDisplay manifoldDisplay = manifoldDisplay();
+    {
+      LeversRender leversRender = LeversRender.of(manifoldDisplay, control, null, geometricLayer, graphics);
+      leversRender.renderSequence();
+      leversRender.renderIndexP();
+    }
     LaneInterface lane = StableLanes.of( //
         control, //
-        LaneRiesenfeldCurveSubdivision.of(manifoldDisplay().geodesic(), degree)::string, //
+        LaneRiesenfeldCurveSubdivision.of(manifoldDisplay.geodesicSpace(), degree)::string, //
         levels, width().multiply(RationalScalar.HALF));
     try {
       this.lane = Serialization.copy(lane);
@@ -84,5 +93,10 @@ public class LaneConsumptionDemo extends AbstractCurveDemo {
     new LaneConsumptionDemo( //
         lane -> System.out.println("control points: " + lane.controlPoints().length()), //
         lane -> System.out.println("refined points: " + lane.midLane().length())).setVisible(1200, 900);
+  }
+
+  @Override
+  public BaseFrame start() {
+    return timerFrame;
   }
 }
